# Calculator.app

./: Cargo.toml  README.md
calculator-app-interpreter/: Cargo.toml  README.md
calculator-app-interpreter/operation/: README.md
calculator-app-interpreter/src/: lib.rs
examples/: factorial  fibonacci  ifelse  modulo
interpreter/: Cargo.toml  README.md
interpreter/operation/: Cargo.toml
interpreter/operation/src/: lib.rs
interpreter/src/: lib.rs
operation/: Cargo.toml
operation/src/: lib.rs
src/: main.rs
