[workspace]
members = ["calculator-app-interpreter"]

[package]
name = "calculator-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calculator-app-interpreter = { path = "calculator-app-interpreter" }
